========================
Django Tagging Changelog
========================


SVN Trunk Changes:
------------------

* Added ``tagging.register`` to register models with the tagging app.
  Initially, a ``tagging.managers.ModelTaggedItemManager`` is added for
  convenient access to tagged items.

* Moved ``TagManager`` and ``TaggedItemManager`` to ``models.py`` - gets
  rid of some import related silliness, as ``TagManager`` needs access
  to ``TaggedItem``.

Version 0.2, 12th Jan 2008:
---------------------------

Packaged from revision 122 in Subversion; download at
http://django-tagging.googlecode.com/files/tagging-0.2.zip

* Added a ``tag_cloud_for_model`` template tag.

* Added a ``MAX_TAG_LENGTH`` setting.

* Multi-word tags are here - simple space-delimited input still works.
  Double quotes and/or commas are used to delineate multi- word tags.
  As far as valid tag contents - anything goes, at least initially.

* BACKWARDS-INCOMPATIBLE CHANGE - ``django.utils.get_tag_name_list`` and
  related regular expressions have been removed in favour of a new tag
  input parsing function, ``django.utils.parse_tag_input``.

* BACKWARDS-INCOMPATIBLE CHANGE - ``Tag`` and ``TaggedItem`` no longer
  declare an explicit ``db_table``. If you can't rename your tables,
  you'll have to put these back in manually.

* Fixed a bug in calculation of logarithmic tag clouds - ``font_size``
  attributes were not being set in some cases when the least used tag in
  the cloud had been used more than once.

* For consistency of return type, ``TaggedItemManager.get_by_model`` now
  returns an empty ``QuerySet`` instead of an empty ``list`` if
  non-existent tags were given.

* Fixed a bug caused by ``cloud_for_model`` not passing its
  ``distribution`` argument to ``calculate_cloud``.

* Added ``TaggedItemManager.get_union_by_model`` for looking up items
  tagged with any one of a list of tags.

* Added ``TagManager.add_tag`` for adding a single extra tag to an
  object.
