@@ -2,16 +2,32 @@
 Custom managers for Django models registered with the tagging
 application.
 """
-from django.db import models
+from django.contrib.contenttypes.models import ContentType
+from django.db import connection, models
 
-from tagging.models import TaggedItem
+from tagging.models import Tag, TaggedItem
+
+class ModelTagManager(models.Manager):
+    """
+    A manager for retrieving tags for a particular model.
+    """
+    def get_query_set(self):
+        ctype = ContentType.objects.get_for_model(self.model)
+        return Tag.objects.filter(
+            items__content_type__pk=ctype.pk).distinct()
+
+    def cloud(self, *args, **kwargs):
+        return Tag.objects.cloud_for_model(self.model, *args, **kwargs)
+
+    def related(self, tags, *args, **kwargs):
+        return Tag.objects.related_for_model(tags, self.model, *args, **kwargs)
 
 class ModelTaggedItemManager(models.Manager):
     """
     A manager for retrieving model instances based on their tags.
     """
-    def related_to(self, obj):
-        return TaggedItem.objects.get_related(obj, self.model)
+    def related_to(self, obj, *args, **kwargs):
+        return TaggedItem.objects.get_related(obj, self.model, *args, **kwargs)
 
     def with_all(self, tags):
         return TaggedItem.objects.get_by_model(self.model, tags)
